--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.generate-ddl=true
+ 
+# App Properties
+apiwatDev.app.jwtSecret=jwtGrokonezSecretKey
+apiwatDev.app.jwtExpiration=864000
